--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
     <main>
         <section class="sedans">
-            <img src="" alt="">
+            <img src="./imagens/icon-sedans.svg" alt="carros sedan">
 
-            <h1></h1>
-            <p></p>
-            <a href=""></a>
+            <h2>Sedans</h2>
+            <p>Escolha um sedan pelo seu preço acessível e excelente economia de combustível. Ideal para dirigir na cidade ou na sua próxima viagem.</p>
+            <a href="">Ver mais</a>
         </section>
 
         <section class="suvs">
-            <img src="" alt="">
+            <img src="./imagens/icon-suvs.svg" alt="carros suvs">
 
-            <h1></h1>
+            <h2>SUVs</h2>
             <p></p>
             <a href=""></a>
         </section>
@@ -27,7 +27,7 @@
         <section class="luxuosos">
             <img src="" alt="">
 
-            <h1></h1>
+            <h2></h2>
             <p></p>
             <a href=""></a>
         </section>
